--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
         </div>
         <!- Services End -->
 
+        <!-- benefits Start -->
         <div class="container-fluid feature py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
@@ -425,8 +426,9 @@
                 </div>
             </div>
         </div>
+        <!-- benefits End -->
 
-
+        <!-- Feature Start -->
         <div class="container-fluid bg-white feature py-5">
             <div class="container py-5">
             <div class="row">
@@ -441,6 +443,7 @@
             </div>
             </div>
         </div>
+        <!-- Feature End -->
 
         <!-- Car categories Start -->
         <!-- <div class="container-fluid categories pb-5">
@@ -632,8 +635,40 @@
         </div> -->
         <!-- Car categories End -->
 
-        <!-- Car Steps Start -->
-        <div class="container-fluid steps py-5">
+
+        <div class="container-fluid feature py-5">
+            <div class="container py-5">
+                <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
+                    <h2 class="display-5 text-capitalize mb-3">Demostración de  <span class="text-primary">IGA</span></h2>
+                </div>  
+                <div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="video">
+                                <video controls autoplay loop muted playsinline class="w-100">
+                                    <source src="img/video/video_demo_1.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 d-flex align-items-center">
+                            <div>
+                                <h3 class="mb-3">Demostración de IGA</h3>
+                                <p>
+                                    En este video, mostramos cómo nuestra solución de IIoT puede optimizar los procesos industriales. 
+                                    Descubre cómo nuestros sensores inteligentes y plataformas digitales trabajan juntos para ofrecer 
+                                    monitoreo en tiempo real, análisis predictivo y reducción de costos operativos.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+
+
+        <!-- Use case Start -->
+        <!-- <div class="container-fluid steps py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
                     <h1 class="display-5 text-capitalize text-white mb-3">Casos de <span class="text-primary">Uso</span></h1>
@@ -664,8 +699,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Car Steps End -->
+        </div> -->
+        <!-- Use Case End -->
 
 
         <!-- Blog Start -->
@@ -734,14 +769,14 @@
         <!-- Blog End -->
 
         <!-- Banner Start -->
-        <!-- <div class="container-fluid banner pb-5 wow zoomInDown" data-wow-delay="0.1s">
+        <div class="container-fluid banner pb-5 wow zoomInDown" data-wow-delay="0.1s">
             <div class="container pb-5">
                 <div class="banner-item rounded">
                     <img src="img/banner-1.jpg" class="img-fluid rounded w-100" alt="">
                     <div class="banner-content">
-                        <h2 class="text-primary">Rent Your Car</h2>
-                        <h1 class="text-white">Interested in Renting?</h1>
-                        <p class="text-white">Don't hesitate and send us a message.</p>
+                        <h2 class="text-primary">Contactanos</h2>
+                        <h1 class="text-white">Te interesa saber más?</h1>
+                        <p class="text-white">Envianos un mensaje a nuestros contactos.</p>
                         <div class="banner-btn">
                             <a href="#" class="btn btn-secondary rounded-pill py-3 px-4 px-md-5 me-2">WhatchApp</a>
                             <a href="#" class="btn btn-primary rounded-pill py-3 px-4 px-md-5 ms-2">Contact Us</a>
@@ -749,7 +784,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- Banner End -->
 
         <!-- Team Start -->
