--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <div class="row gx-0 align-items-center" style="height: 45px;">
                     <div class="col-lg-6 text-center text-lg-start mb-lg-0">
                         <div class="d-flex flex-wrap">
-                            <a href="#" class="text-muted me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Ubicación</a>
-                            <a href="tel:+01234567890" class="text-muted me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+01234567890</a>
-                            <a href="mailto:example@gmail.com" class="text-muted me-0"><i class="fas fa-envelope text-primary me-2"></i>Example@gmail.com</a>
+                            <a href="#" class="text-white me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Ubicación</a>
+                            <a href="tel:+01234567890" class="text-white me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+01234567890</a>
+                            <a href="mailto:example@gmail.com" class="text-white me-0"><i class="fas fa-envelope text-primary me-2"></i>Example@gmail.com</a>
                         </div>
                     </div>
                     <div class="col-lg-6 text-center text-lg-end">
@@ -767,12 +767,11 @@
             </div>
         </div> -->
         <!-- Blog End -->
-         
 
-        <br><br>
+
         <!-- Banner Start -->
-        <div class="container-fluid banner pb-5 wow zoomInDown" data-wow-delay="0.1s">
-            <div class="container pb-5">
+        <div class="container-fluid banner py-5 wow zoomInDown" data-wow-delay="0.1s">
+            <div class="container py-5">
                 <div class="banner-item rounded">
                     <img src="img/banner-1.jpg" class="img-fluid rounded w-100" alt="">
                     <div class="banner-content">
