--- a/feature.html
+++ b/feature.html
@@ -50,21 +50,21 @@
     <div class="container-fluid topbar bg-secondary d-none d-xl-block w-100">
         <div class="container">
             <div class="row gx-0 align-items-center" style="height: 45px;">
-                <div class="col-lg-6 text-center text-lg-start mb-lg-0">
-                    <div class="d-flex flex-wrap">
+                <div class="col-lg-12 text-center">
+                    <div class="d-flex justify-content-center flex-wrap"></div>
                         <a href="#" class="text-white me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Ubicación</a>
                         <a href="tel:+01234567890" class="text-white me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+01234567890</a>
                         <a href="mailto:example@gmail.com" class="text-white me-0"><i class="fas fa-envelope text-primary me-2"></i>Example@gmail.com</a>
                     </div>
                 </div>
-                <div class="col-lg-6 text-center text-lg-end">
+                <!-- <div class="col-lg-6 text-center text-lg-end">
                     <div class="d-flex align-items-center justify-content-end">
                         <a href="#" class="btn btn-light btn-sm-square rounded-circle me-3"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="btn btn-light btn-sm-square rounded-circle me-3"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="btn btn-light btn-sm-square rounded-circle me-3"><i class="fab fa-instagram"></i></a>
                         <a href="#" class="btn btn-light btn-sm-square rounded-circle me-0"><i class="fab fa-linkedin-in"></i></a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
